--- a/src/pages/telagestor/TelaGestor.css
+++ b/src/pages/telagestor/TelaGestor.css
@@ -1,5 +1,5 @@
 .monitoramento-container {
-  background-color: #001a16;
+  background-color: #e2e2e2;
   min-height: 100vh;
   color: white;
   display: flex;
@@ -22,13 +22,13 @@
   margin-bottom: 40px;
 }
 
-.tabela {
+/* .tabela {
   display: flex;
   flex-direction: column;
   gap: 12px;
   width: 80%;
   max-width: 600px;
-}
+} */
 
 .cabecalho,
 .linha {
@@ -45,7 +45,7 @@
 .linha .coluna {
   background-color: #d9d9d9;
   color: black;
-  padding: 8px 0;
+  padding: 10px 0;
   border-radius: 8px;
   font-weight: 500;
   justify-self: unset;
@@ -55,16 +55,18 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   text-align: center;
-  gap: 12px; /* <-- adiciona espaço entre os quadros */
+  /* gap: 12px; <-- adiciona espaço entre os quadros */
 }
 
 .tabela {
-  display: flex;
-  flex-direction: column;
-  gap: 16px; /* mais espaço entre as linhas */
-  width: 80%;
-  max-width: 600px;
-  color: #c4c4c4;
+    display: flex;
+    flex-direction: column;
+    gap: 1.8rem;
+    background-color: #ffffff;
+    border-radius: 80px;
+    padding: 50px;
+    width: 100%;    
+    grid-template-columns: 1fr 2fr 1fr;
 }
 
 
