--- a/Projeto Loom/src/pages/acessos/Acessos.css
+++ b/Projeto Loom/src/pages/acessos/Acessos.css
@@ -7,6 +7,16 @@
   align-items: center;
   justify-content: center;
   font-family: "Gantari", sans-serif;
+    transition: margin-left 0.4s ease;
+}
+
+.monitoramento-container.sidebar-open {
+  margin-left: 230px;
+}
+
+.monitoramento-container.sidebar-close,
+.monitoramento-container.sidebar-mini {
+  margin-left: 80px;
 }
 
 .titulo {
