--- a/Projeto Loom/src/pages/mensagem/Mensagem.css
+++ b/Projeto Loom/src/pages/mensagem/Mensagem.css
@@ -4,24 +4,39 @@
 .pagina-mensagens {
   display: flex;
   flex-direction: column;
-  align-items: center; /* Centraliza o título e o card */
+  align-items: center;
+  /* Centraliza o título e o card */
+  transition: margin-left 0.4s ease;
+}
+
+.pagina-mensagens.sidebar-open {
+  margin-left: 230px;
+}
+
+.pagina-mensagens.sidebar-close,
+.pagina-mensagens.sidebar-mini {
+  margin-left: 80px;
 }
 
 /* NOVO: Estilo para o título que agora fica do lado de fora */
 .titulo-externo {
-  color: #f0f0f0; /* Cor clara para contrastar com o fundo escuro */
+  color: #f0f0f0;
+  /* Cor clara para contrastar com o fundo escuro */
   font-size: 1.5em;
   font-weight: 600;
   letter-spacing: 2px;
-  margin-bottom: 20px; /* Espaço entre o título e a caixa branca */
+  margin-bottom: 20px;
+  /* Espaço entre o título e a caixa branca */
 }
 
 .mensagens-container {
   background-color: #ffffff;
   width: 1000%;
   /* height: 80%; */
-  max-width: 900px; /* Ajustei um pouco para ficar mais parecido com a foto */
-  padding: 15px 30px; /* Reduzi o padding de cima pois não há mais título interno */
+  max-width: 900px;
+  /* Ajustei um pouco para ficar mais parecido com a foto */
+  padding: 15px 30px;
+  /* Reduzi o padding de cima pois não há mais título interno */
   border-radius: 25px;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
   box-sizing: border-box;
@@ -67,4 +82,3 @@
   border-radius: 50%;
   border: 1px solid #fff;
 }
-
