--- a/Projeto Loom/src/pages/mensagemGestor/MensagemGestor.css
+++ b/Projeto Loom/src/pages/mensagemGestor/MensagemGestor.css
@@ -5,12 +5,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* Centraliza o título e o card */
+  justify-content: center;
+  height: 100vh;
+  background-color: #001410;
   transition: margin-left 0.4s ease;
 }
 
 .pagina-mensagens.sidebar-open {
-    margin-left: 203px;
+  margin-left: 200px;
 }
 
 .pagina-mensagens.sidebar-close,
