feat: Adicionando a tela de Redefinir Senha

--- a/Projeto Loom/src/pages/cadastroUsuario/CadastroUsuario.css
+++ b/Projeto Loom/src/pages/cadastroUsuario/CadastroUsuario.css
@@ -20,7 +20,7 @@
 
 .section_cadastro {
   flex: 1;
-  background-color: #000;
+  background-color: #0B0D0E;
   display: flex;
   justify-content: center;
   align-items: center;
